<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sick_scan2</name>
  <version>0.1.7</version>
  <description>
    A ROS2 driver for the SICK TiM series of laser scanners.
    This package is based on the sick_scan-Repository.
  </description>

  <maintainer email="michael.lehning@lehning.de">Michael Lehning</maintainer>
  <author email="michael.lehning@lehning.de">Michael Lehning</author>
  <author email="ros@jochen.sprickerhof.de">Jochen Sprickerhof</author>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/sick_scan2</url>
  <url type="repository">https://github.com/SICKAG/sick_scan2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>diagnostic_updater</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


