<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sick_scan2</name>
  <version>0.1.9</version>
  <description>
    A ROS2 driver for the SICK TiM series of laser scanners.
    This package is based on the sick_scan-Repository.
  </description>

  <maintainer email="michael.lehning@lehning.de">Michael Lehning</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/sick_scan2</url>
  <url type="repository">https://github.com/SICKAG/sick_scan2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend condition="$BUILD_WITH_LDMRS_SUPPORT == True">rosidl_default_generators</buildtool_depend>
  <build_depend condition="$BUILD_WITH_LDMRS_SUPPORT == True">rosidl_default_generators</build_depend>

  <depend>boost</depend>
  <depend>diagnostic_updater</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend condition="$BUILD_WITH_LDMRS_SUPPORT == True">libsick_ldmrs</depend>

  <exec_depend condition="$BUILD_WITH_LDMRS_SUPPORT == True">rosidl_default_runtime</exec_depend> 

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group condition="$BUILD_WITH_LDMRS_SUPPORT == True">rosidl_interface_packages</member_of_group>

</package>


